--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "babel-preset-stage-1": "^6.1.18",
+    "hoek": "^5.0.3",
     "jquery": "^3.3.1",
     "lodash": "^3.10.1",
     "react": "^0.14.3",
