--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "babel-preset-stage-1": "^6.1.18",
+    "forwarded": "^0.1.2",
     "fresh": "^0.5.2",
     "growl": "^1.10.5",
     "hoek": "^5.0.3",
