--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-sparklines": "^1.6.0",
     "redux": "^3.0.4",
     "redux-promise": "^0.5.3",
+    "sshpk": "^1.16.0",
     "tough-cookie": "^3.0.1"
   }
 }
