--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "axios": "^0.16.2",
     "babel-preset-stage-1": "^6.1.18",
     "cryptiles": "^4.1.3",
+    "extend": "^3.0.2",
     "forwarded": "^0.1.2",
     "fresh": "^0.5.2",
     "growl": "^1.10.5",
