--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "hoek": "^5.0.3",
     "jquery": "^3.3.1",
     "lodash": "^4.17.11",
+    "randomatic": "^3.1.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-redux": "4.3.0",
